# Captain-Alex-BOT

./: .gitignore  Procfile  README.md  TOKEN.env  captainAlex_script.py  help_cog.py  main.py  main_linux.py  music_cog.py  package-lock.json  pyproject.toml  requirements.txt  variety_cog.py  webserver.py
.cache/replit/: __replit_disk_meta.json
.github/workflows/: deploy.yml
.upm/: store.json
NOT USED/: main1.py  music.py
